Fix colors, fix pagination alignment

--- a/sass/variables/_colors.scss
+++ b/sass/variables/_colors.scss
@@ -6,6 +6,7 @@
   --color-black-rgb: 0 0 0;
   --color-darkgrey: #4f5964;
   --color-grey: #666;
+  --color-midnight-gray: #444;
   --color-grey-two: #777;
   --color-light-blue: #9b9ba8;
   --color-hover: #141414;
